--- a/views/partials/infos/closed.ejs
+++ b/views/partials/infos/closed.ejs
@@ -1,4 +1,6 @@
-<div class="text-center">
+<div class="info">
     <i class="fa fa-bed fa-2x info-icon" aria-hidden="true"></i>
-    <br> Heute leider geschlossen.
+    <p>
+        Heute leider geschlossen.
+    </p>
 </div>
