--- a/views/partials/infos/error.ejs
+++ b/views/partials/infos/error.ejs
@@ -1,12 +1,14 @@
-<div class="text-center error">
-    <i class="fa fa-frown-o fa-2x info-icon" aria-hidden="true"></i>
-    <br>
-    <p>Leider konnten wir die Daten nicht abrufen.</p>
-    <p>Sie sollten aber auf der
-        <a href="<%= userFriendlyUrl(restaurant) %>" target="_blank">Homepage des Restaurants</a> stehen.
-        <br>
+<div class="info error">
+    <i class="fa fa-frown fa-2x info-icon" aria-hidden="true"></i>
+    <p>
+        Leider konnten wir die Daten nicht abrufen.
     </p>
-    <p>Wir kümmern uns bald darum!
-        <i class="fa fa-smile-o fa-fw" aria-hidden="true"></i>
+    <p>
+        Sie sollten aber auf der
+        <a href="<%= userFriendlyUrl(restaurant) %>" target="_blank">Homepage des Restaurants</a>
+        stehen.
+    </p>
+    <p>
+        Wir kümmern uns bald darum!
     </p>
 </div>
