--- a/views/partials/infos/no-menu.ejs
+++ b/views/partials/infos/no-menu.ejs
@@ -1,4 +1,6 @@
-<div class="text-center">
+<div class="info">
     <i class="fa fa-book fa-2x info-icon" aria-hidden="true"></i>
-    <br> Heute leider nur à la carte.
+    <p>
+        Heute leider nur à la carte.
+    </p>
 </div>
