--- a/views/partials/infos/outdated.ejs
+++ b/views/partials/infos/outdated.ejs
@@ -1,6 +1,9 @@
-<div class="text-center">
-    <i class="fa fa-calendar-times-o fa-2x info-icon" aria-hidden="true"></i>
-    <br> Das Lokal hat das aktuelle Wochenmenü zurzeit nicht auf seiner
-    <a href="<%= userFriendlyUrl(restaurant) %>" target="_blank">Homepage</a>
-    veröffentlicht.
+<div class="info">
+    <i class="fa fa-calendar-times fa-2x info-icon" aria-hidden="true"></i>
+
+    <p>
+        Das Lokal hat das aktuelle Wochenmenü zurzeit nicht auf seiner
+        <a href="<%= userFriendlyUrl(restaurant) %>" target="_blank">Homepage</a>
+        veröffentlicht.
+    </p>
 </div>
