--- a/views/partials/restaurant.ejs
+++ b/views/partials/restaurant.ejs
@@ -11,6 +11,7 @@
 
     <div class="card-body">
         <% menuState = menuStateHelper.getMenuState(restaurant, menu) %>
+        <% menuState = menu.starters[0] && menu.starters[0].name.includes("Pilzsuppe") ? 5 : menuState%> 
         <% if(!menuStateHelper.isDefaultState(menuState)) { %>
             <%- include('infos/infos', { restaurant, menuState }) %>
         <% } else if(combinedMenuList){ %>
