--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,103 +2,101 @@
 <% include partials/common/header.ejs %>
 
 
-<div class="container d-flex flex-column">
-    <div class="about">
-        <div class="row">
-            <div class="mx-auto back-icon-container">
-                <a href="/">
-                    <div class="card center-block">
-                        <div class="card-body">
-                            <i class="fa fa-cutlery fa-3x" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                </a>
-            </div>
+<div class="container" id="about">
+    <div class="row">
+        <div class="col text-center back-icon">
+            <a href="/">
+                <i class="fa fa-utensils fa-4x" aria-hidden="true"></i>
+                
+                <h5>
+                    Zurück zum Essen
+                </h5>
+            </a>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <div class="card about-us mb-3">
-                    <h3 class="card-header">Über uns</h3>
-                    <div class="card-body">
-                        <p class="card-text">Diese Homepage ist ein Hobbyprojekt und steht in keinerlei Verbindung mit
-                            den angeführten Restaurants. Damit sind die Formalitäten erledigt.</p>
-                        <p class="card-text">So ein Mittagessen kann schon was und man sollte nie auf eine anständige
-                            Mahlzeit verzichten. Die Studenten an der Alpen-Adria-Universität Klagenfurt haben es aber
-                            auch ziemlich gut mit dem Angebot rund um den Campus erwischt. Zahlreiche Mittagsmenüs
-                            werden tagtäglich angeboten, doch fehlt einem oft der Überblick. Wann gibt es wo was? Da
-                            muss man dann schon jede Website abklappern und sich dann auch noch irgendwie das Angebot
-                            merken und wie viel es kostet. Zum Glück war ein paar Informatikern recht langweilig und sie
-                            haben dieses Problem ganz einfach, still und leise gelöst. Auf
-                            <a class="nowrap" href="/">
-                                <i class="fa fa-cutlery" aria-hidden="true"></i> AAU Food
-                            </a>
-                            findet man die aktuellen Mittagsmenüs von Lokalen am Campus und das Vergleichen fällt ganz
-                            leicht. So kommt man noch schneller und leichter zu einem wohlverdienten Mittagessen. Es
-                            wird noch fleißig an der Ergänzung der Lokale gearbeitet – wenn ihr allerdings etwas ganz
-                            fest vermisst, schreibt einfach eine Nachricht an <span id="mail">uns</span> und wir tun
-                            unser Bestes, eure Wünsche zu erfüllen. Also Mahlzeit und lasst es euch schmecken!</p>
-                        <p class="card-text">
-                            Hinter dem Projekt stehen <span id="name0"><span id="fabian">Fabian</span></span>, <span
-                                    id="name1"><span id="markus">Markus</span></span> und <span id="name2"><span
-                                        id="kristina">Kristina</span></span>. Auf Kristinas Jammern hin, dass es so
-                            umständlich ist, das beste Mittagessen zu finden, war die Grundidee geboren. Fabian und
-                            Markus, die besagten Informatiker, haben nicht lange gebraucht und schon kommt die ganze AAU
-                            in den Genuss von
-                            <a class="nowrap" href="/">
-                                <i class="fa fa-cutlery" aria-hidden="true"></i> AAU Food</a>. Mit der Zeit haben auch
-                            <span id="additionalName0"><span id="behackl">Benjamin</span></span> und <span
-                                    id="additionalName1"><span id="philipp">Philipp</span></span> Wind von der Sache
-                            bekommen und fleißig mit angepackt.
-                        </p>
-                        <p class="card-text">Allerlei Infos zum technischen Krimskrams findet ihr auf unserer
-                            <a class="nowrap" href="https://github.com/Felfio/AAUFood">
-                                <i aria-hidden="true" class="fa fa-github"></i> GitHub Projektseite</a>.
-                        </p>
-                    </div>
+    <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+            <div class="card about-us">
+                <h3 class="card-header">Über uns</h3>
+                <div class="card-body">
+                    <p class="card-text">Diese Homepage ist ein Hobbyprojekt und steht in keinerlei Verbindung mit
+                        den angeführten Restaurants. Damit sind die Formalitäten erledigt.</p>
+                    <p class="card-text">So ein Mittagessen kann schon was und man sollte nie auf eine anständige
+                        Mahlzeit verzichten. Die Studenten an der Alpen-Adria-Universität Klagenfurt haben es aber
+                        auch ziemlich gut mit dem Angebot rund um den Campus erwischt. Zahlreiche Mittagsmenüs
+                        werden tagtäglich angeboten, doch fehlt einem oft der Überblick. Wann gibt es wo was? Da
+                        muss man dann schon jede Website abklappern und sich dann auch noch irgendwie das Angebot
+                        merken und wie viel es kostet. Zum Glück war ein paar Informatikern recht langweilig und sie
+                        haben dieses Problem ganz einfach, still und leise gelöst. Auf
+                        <a class="nowrap" href="/">
+                            <i class="fa fa-utensils" aria-hidden="true"></i> AAU Food
+                        </a>
+                        findet man die aktuellen Mittagsmenüs von Lokalen am Campus und das Vergleichen fällt ganz
+                        leicht. So kommt man noch schneller und leichter zu einem wohlverdienten Mittagessen. Es
+                        wird noch fleißig an der Ergänzung der Lokale gearbeitet – wenn ihr allerdings etwas ganz
+                        fest vermisst, schreibt einfach eine Nachricht an <span id="mail">uns</span> und wir tun
+                        unser Bestes, eure Wünsche zu erfüllen. Also Mahlzeit und lasst es euch schmecken!</p>
+                    <p class="card-text">
+                        Hinter dem Projekt stehen 
+                        <span id="name0"></span>, <span id="name1"></span> und <span id="name2"></span>.
+                        Auf Kristinas Jammern hin, dass es so umständlich ist, das beste Mittagessen zu finden, war die 
+                        Grundidee geboren. Fabian und Markus, die besagten Informatiker, haben nicht lange gebraucht 
+                        und schon kommt die ganze AAU in den Genuss von
+                        <a class="nowrap" href="/">
+                            <i class="fa fa-utensils" aria-hidden="true"></i> AAU Food
+                        </a>.                             
+                        Mit der Zeit haben auch
+                        <span id="additionalName0"></span> und <span id="additionalName1"></span> Wind von der Sache
+                        bekommen und fleißig mit angepackt.
+                    </p>
+                    <p class="card-text">Allerlei Infos zum technischen Krimskrams findet ihr auf unserer
+                        <a class="nowrap" href="https://github.com/Felfio/AAUFood">
+                            <i aria-hidden="true" class="fab fa-github"></i> GitHub Projektseite</a>.
+                    </p>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="row d-flex d-row">
-            <div class="flex-1">
-                <div class="card mr-3">
-                    <div class="card-img-top cat-fact-header">
-                        <img src="<%= catFactHeaderUrl() %>" alt="Random Kitten Image"/>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Random Cat Fact</h4>
-                        <p class="card-text">
-                            <%= catFact %>
-                        </p>
+    <div id="extra-infos" class="row">
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-img-top cat-fact-header">
+                    <img src="<%= catFactHeaderUrl() %>" alt="Random Kitten Image"/>
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Random Cat Fact</h4>
+                    <p class="card-text">
+                        <%= catFact %>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <i class="fa fa-fw fa-smile" aria-hidden="true"></i> Danke!
+                    </h4>
+                    <p class="card-text">Wir danken für die Unterstützung durch</p>
+                    <div class="sponsor-images">
+                        <a href="https://www.oeh-klagenfurt.at/" target="_blank">
+                            <img src="images/sponsors/oehklagenfurt.png" alt="Die ÖH Klagenfurt">
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="flex-1">
-                <div class="card">
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <i class="fa fa-fw fa-smile-o" aria-hidden="true"></i> Danke!
-                        </h4>
-                        <p class="card-text">Wir danken für die Unterstützung durch</p>
-                        <div class="sponsor-images">
-                            <a href="https://www.oeh-klagenfurt.at/" target="_blank">
-                                <img src="images/sponsors/oehklagenfurt.png" alt="Die ÖH Klagenfurt">
-                            </a>
-                        </div>
-                    </div>
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <i class="fa fa-fw fa-clock" aria-hidden="true"></i>
+                        Besucher heute: <%= visitorStats.dailyVisitors %></h4>
+                    <p class="card-text">
+                        <%= dailyVisitorsFact %>
+                    </p>
                 </div>
-                <div class="card mt-3">
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <i class="fa fa-fw fa-clock-o" aria-hidden="true"></i>
-                            Besucher heute: <%= visitorStats.dailyVisitors %></h4>
-                        <p class="card-text">
-                            <%= dailyVisitorsFact %>
-                        </p>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
