--- a/views/partials/menu-lists/combined-menu-list.ejs
+++ b/views/partials/menu-lists/combined-menu-list.ejs
@@ -14,7 +14,10 @@
 
         <% singleMenu.entries.forEach(function(menuItem){ %>
             <li class="list-group-item">
-                <%= menuItem %>
+                <%= menuItem.name %>
+                <% if(menuItem.allergens) { %> 
+                    <span class="allergens"><%= menuItem.allergens %></span>
+                <% } %>
             </li>
         <% }); %>
     <% }); %>
