--- a/views/partials/menu-lists/menu-list.ejs
+++ b/views/partials/menu-lists/menu-list.ejs
@@ -4,6 +4,9 @@
         <% menu.starters.forEach(function (starter) { %>
             <li class="list-group-item">
                 <%= starter.name %>
+                <% if(starter.allergens) { %> 
+                    <span class="allergens"><%= starter.allergens %></span>
+                <% } %>
             </li>
         <% }); %>
     </ul>
@@ -26,6 +29,9 @@
             </li>
             <li class="list-group-item">
                 <%= main.name %>
+                <% if(main.allergens) { %> 
+                    <span class="allergens"><%= main.allergens %></span>
+                <% } %>
             </li>
         <% }); %>
     </ul>
