--- a/public/styles/_variables.scss
+++ b/public/styles/_variables.scss
@@ -20,3 +20,7 @@ $menuItemSpacing: 4px;
 $footerHeight: 32px;
 $footerColor: rgba(0, 0, 0, 0.75);
 $footerFontColor: #eceeef;
+
+//$headingFont: $font-family-sans-serif;
+$raleway: 'Raleway', sans-serif;
+$headingFont: $raleway;
