New and better snowfall effect

--- a/views/partials/common/footer.ejs
+++ b/views/partials/common/footer.ejs
@@ -1,6 +1,6 @@
 <div id="cookieConsentHolder"></div>
 
-<footer class="footer">
+<footer id="footer" class="footer">
     <div class="daily-counter" title="Besucher heute">
         <i class="fa fa-fw fa-clock" aria-hidden="true"></i>
         <span id="dailyVisitors">
