fix copy/paste error

--- a/views/partials/menu-lists/combined-menu-list.ejs
+++ b/views/partials/menu-lists/combined-menu-list.ejs
@@ -7,7 +7,7 @@
 
             <% if(singleMenu.price && !singleMenu.isInfo) { %>
                 <div class="price-tag">
-                        <%= main.price + " €" %>
+                        <%= singleMenu.price + " €" %>
                 </div>
             <% } %>
         </li>
