Mittagstisch went Hotspot // Printview not up-to-date

--- a/public/styles/_variables.scss
+++ b/public/styles/_variables.scss
@@ -1,5 +1,5 @@
 /*Colors and definitions*/
-$mittagstischGreen: #5fb127;
+$hotspotGreen: #5fb127;
 $mensaOrange: #f49900;
 $uniwirtPurple: #800768;
 $uniPizzeriaBg: #2336b1;
