environment for villa lido menu

--- a/app/public/styles/_variables.scss
+++ b/app/public/styles/_variables.scss
@@ -5,6 +5,7 @@ $uniwirtPurple: #800768;
 $uniPizzeriaBg: #2336b1;
 $laPastaBg: #ca0928;
 $princsBg: #e30613;
+$villalidoBg: #c50023;
 
 $infoIconColor: #444;
 $allergensColor: #c0c0c0;
