--- a/app/public/styles/app.scss
+++ b/app/public/styles/app.scss
@@ -102,6 +102,10 @@ body {
   }
 }
 
+.villa-lido{
+  @include restaurantColors($villalidoBg, white)
+}
+
 .mensa {
   @include restaurantColors($mensaOrange, white);
 }
