--- a/app/views/partials/day.ejs
+++ b/app/views/partials/day.ejs
@@ -15,7 +15,7 @@
             <%- include('restaurant', {restaurant: 'uniwirt', restaurantName: 'Uniwirt', menu: uniwirt ? uniwirt[day] : null}) %>
         </div>
         <div class="col-xl-3 col-lg-6 col-md-12">
-            <%- include('restaurant', {restaurant: 'villa-lido', restaurantName: 'Villa Lido', menu: villaLido ? villaLido[day] : null}) %>
+            <%- include('restaurant', {restaurant: 'villa-lido', restaurantName: 'Villa Lido', menu: villaLido ? villaLido[day] : null, combinedMenuList: true}) %>
         </div>
         <div class="col-xl-3 col-lg-6 col-md-12">
             <%- include('restaurant', {restaurant: 'uni-pizzeria', restaurantName: 'Uni-Pizzeria', menu: uniPizzeria ? uniPizzeria[day] : null}) %>
