environment for bits and bytes

--- a/app/public/styles/_variables.scss
+++ b/app/public/styles/_variables.scss
@@ -6,6 +6,7 @@ $uniPizzeriaBg: #2336b1;
 $laPastaBg: #ca0928;
 $princsBg: #e30613;
 $villalidoBg: #c50023;
+$bitsAndBytesBg: #002022;
 
 $infoIconColor: #444;
 $allergensColor: #c0c0c0;
