--- a/app/views/partials/day.ejs
+++ b/app/views/partials/day.ejs
@@ -24,7 +24,7 @@
             <%- include('restaurant', {restaurant: 'hotspot', restaurantName: 'Hotspot', menu: hotspot ? hotspot[day] : null, combinedMenuList: true}) %>
         </div>
         <div class="col-xl-3 col-lg-6 col-md-12">
-            <%- include('restaurant', {restaurant: 'bits-and-bytes', restaurantName: 'Bites & Bytes', menu: bitsAndBytes ? bitsAndBytes[day] : null, combinedMenuList: true}) %>
+            <%- include('restaurant', {restaurant: 'bits-and-bytes', restaurantName: 'Bits & Bytes', menu: bitsAndBytes ? bitsAndBytes[day] : null, combinedMenuList: true}) %>
         </div>
     </div>
 </div>
