changed card view to card-columns

--- a/app/public/styles/app.scss
+++ b/app/public/styles/app.scss
@@ -356,6 +356,29 @@ footer {
   }
 }
 
+.card-columns {
+  @include media-breakpoint-only(xs) {
+    column-count: 1;
+    padding: 0 1em;
+  }
+  @include media-breakpoint-only(sm) {
+    column-count: 1;
+    padding: 0 1em;
+  }
+  @include media-breakpoint-only(md) {
+    column-count: 1;
+    padding: 0 1em;
+  }
+  @include media-breakpoint-only(lg) {
+    column-count: 2;
+    padding: 0 4em;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 3;
+    padding: 0 4em;
+  }
+}
+
 #snowCanvas {
   position: absolute;
   top: 0;
